--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -81,8 +81,10 @@ p + ggtitle("n = 4") +
   xlab("temperature") + ylab(" density")
 
 print(paste('mean = ', mean(my1000$k4),' sd = ',sd(my1000$k4)))
-
 ```
+
+From my observation when you chage the number and kniut it gives a dfferent graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the print. k9 is less than half of k2
+
 
 ### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
 
@@ -106,4 +108,4 @@ p + ggtitle("n = 9") +
 xlab("temperature") + ylab(" density")
 ```
 
-After viewing the test it shows that every time its knitted its give a result of a different graph. Also it gives me the value of standard deviation. 
+After viewing the test it shows that every time its knitted its give a result of a different graph. Also it gives me the value of standard deviation. It was  41.9351221945695 the first time and I expect this number to be half than that. It was less than half it's 14.0238939987023
