--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -43,20 +43,20 @@ print(paste('mean = ', mean(my1000$kkardashtemp),' sd = ',sd(my1000$kkardashtemp
 ```
 
 ```{r}
-numb=2
+numb=9
 Hdata = Homers_data[sample(1:1000, size=numb*1000, replace=T),"kkardashtemp"]
 mdata  <-matrix(Hdata,nrow=1000,ncol=numb)
 x.avg <- apply(mdata,1,mean)
-my1000$k2 = x.avg
+my1000$k9 = x.avg
 
-p <- ggplot(my1000, aes(x=k2)) + 
+p <- ggplot(my1000, aes(x=k9)) + 
   geom_density() 
 p
 
 # Add mean line
-  geom_vline(aes(xintercept=mean(k2)),
+  geom_vline(aes(xintercept=mean(k9)),
             color="blue", linetype="dashed", size=1)
-print(paste('mean = ', mean(my1000$k2),' sd = ',sd(my1000$k2)))
+print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 
 ```
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
@@ -81,12 +81,14 @@ p + ggtitle("n = 9") +
   xlab("temperature") + ylab(" density")
 
 print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
+
+
+
 ```
 
-From my observation when you chage the number and kniut it gives a dfferent graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the print. k9 is less than half of k2
-```{r}
-print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
-```
+
+From my observation when you change the number and knit it gives a different graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the second one which was 29.711426903443.It is less than half it is 14.0238939987023.
+
 
 ### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
 
