--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -83,12 +83,12 @@ p + ggtitle("n = 9") +
 print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 ```
 
-From my observation when you change the number and knit it gives a different graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the second one which was 29.711426903443.It is less than half it is 14.0238939987023.
+From my observation when you change the number and knit it gives a different graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the print. k9 is less than half of k2. 
+```{r}
+print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
+```
 
 
-### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
-
-# Now finish by adding blocks with numb being 9, then 16, 25, and 36. be sure to mention how the standard deviation progresses as the sample size changes,
 
 ```{r}
 numb = 9
@@ -107,5 +107,10 @@ p <- ggplot(my1000, aes(x=k9),col=sex) +
 p + ggtitle("n = 9") +
 xlab("temperature") + ylab(" density")
 ```
+
+### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
+
+# Now finish by adding blocks with numb being 9, then 16, 25, and 36. be sure to mention how the standard deviation progresses as the sample size changes,
+
 
 After viewing the test it shows that every time its knitted its give a result of a different graph. Also it gives me the value of standard deviation. It was  41.9351221945695 the first time and I expect this number to be half than that. It was less than half it's 14.0238939987023
