--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -107,6 +107,10 @@ p <- ggplot(my1000, aes(x=k9),col=sex) +
 p + ggtitle("n = 9") +
 xlab("temperature") + ylab(" density")
 ```
+```{r}
+print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
+```
+
 
 ### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
 
