--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -39,24 +39,28 @@ p
 # Add mean line
 p+ geom_vline(aes(xintercept=mean(kkardashtemp)),
             color="blue", linetype="dashed", size=1)
+```
+```{r}
 print(paste('mean = ', mean(my1000$kkardashtemp),' sd = ',sd(my1000$kkardashtemp)))
 ```
 
 ```{r}
-numb=9
+numb=2
 Hdata = Homers_data[sample(1:1000, size=numb*1000, replace=T),"kkardashtemp"]
 mdata  <-matrix(Hdata,nrow=1000,ncol=numb)
 x.avg <- apply(mdata,1,mean)
-my1000$k9 = x.avg
+my1000$k2 = x.avg
 
-p <- ggplot(my1000, aes(x=k9)) + 
+p <- ggplot(my1000, aes(x=k2)) + 
   geom_density() 
 p
+```
 
 # Add mean line
-  geom_vline(aes(xintercept=mean(k9)),
+  geom_vline(aes(xintercept=mean(k2)),
             color="blue", linetype="dashed", size=1)
-print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
+            
+print(paste('mean = ', mean(my1000$k2),' sd = ',sd(my1000$k2)))
 
 ```
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
@@ -83,30 +87,12 @@ p + ggtitle("n = 9") +
 print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 ```
 
-From my observation when you change the number and knit it gives a different graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the print. print(paste( " sd = ",sd(my1000$k9))) is less than half of the k2.
+From my observation when you change the number and knit it gives a different graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the k2.(print(paste( " sd = ",sd(my1000$k9))) is less than half of the k2.
 
 
 
-```{r}
-numb = 9
-Hdata = Homers_data[sample(1:1000,size=numb*1000, replace=T),"kkardashtemp"]
-mdata  <-matrix(Hdata,nrow=1000,ncol=numb)
-x.avg <- apply(mdata,1,mean)
-my1000$k9 = x.avg
 
 
-p <- ggplot(my1000, aes(x=k9),col=sex) + 
-  geom_density() +
-
-# Add mean line
- geom_vline(aes(xintercept=mean(k9)),
-            color="blue", linetype="dashed", size=1)
-p + ggtitle("n = 9") +
-xlab("temperature") + ylab(" density")
-```
-```{r}
-print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
-```
 
 
 ### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
