--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -80,14 +80,23 @@ p <- ggplot(my1000, aes(x=k9),Col=sex) +
             color="blue", linetype="dashed", size=1)
 ```
 
+```{r}
+p + ggtitle("n = 9") +
+  xlab("temperature") + ylab(" density")
+```
+
+```{r}           
+print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
+```
+
+
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
 
 ### There are 3 peaks in the density plot. You pick two people you can get MM,MF.FM,or FF. these are all equally likey so the little peak on left is all the FF's while the little peak on the right is all the MM's so the big one in the middle is both the MF and FM in the same bag so-to-speak.  
 
 
 
-p + ggtitle("n = 9") +
-  xlab("temperature") + ylab(" density")
+
 
 print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 ```
