--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -89,6 +89,7 @@ p + ggtitle("n = 9") +
 print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 ```
 
+The mean will always get close to 50 and the standard deviation is getting smaller. This makes sense since the dividing number in the standard deviation formula is getting bigger, when we predict using 41.38 as the sample standard deviation and use sqrt(9) as the sample size we see the predicted value to be 13.79333 and this is pretty close to the approximate value of 14 for the standard deviation.
 
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
 
