--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -91,6 +91,23 @@ print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 
 The mean will always get close to 50 and the standard deviation is getting smaller. This makes sense since the dividing number in the standard deviation formula is getting bigger, when we predict using 41.38 as the sample standard deviation and use sqrt(9) as the sample size we see the predicted value to be 13.79333 and this is pretty close to the approximate value of 14 for the standard deviation.
 
+```{r}
+numb=16
+Hdata = Homers_data[sample(1:1000, size=numb*1000, replace=T),"kkardashtemp"]
+mdata <-matrix(Hdata,nrow=1000,ncol=numb)
+x.avg <- apply(mdata,1,mean)
+my1000$k16 = x.avg
+
+p <- ggplot(my1000, aes(x=k16), (Col=sex))+
+geom_density()
+
+p + ggtitle("n = 16") +
+xlab("temperature") + ylab("density")
+```
+
+
+
+
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
 
 ### There are 3 peaks in the density plot. You pick two people you can get MM,MF.FM,or FF. these are all equally likey so the little peak on left is all the FF's while the little peak on the right is all the MM's so the big one in the middle is both the MF and FM in the same bag so-to-speak.  
