--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -105,8 +105,9 @@ p + ggtitle("n = 16") +
 xlab("temperature") + ylab("density")
 ```
 
-
-
+```{r}
+print(paste('mean = ', mean(my1000$k16),' sd = ',sd(my1000$k16)))
+```
 
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
 
