--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -109,6 +109,8 @@ xlab("temperature") + ylab("density")
 print(paste('mean = ', mean(my1000$k16),' sd = ',sd(my1000$k16)))
 ```
 
+The mean will always get close to 50 but hovers around 49. The standard deviation is smaller being around 11 compared to the approximate value of n=9’s 14 standard deviation. Predicting the standard deviation value using sqrt(16) we get about 10.345 being relativley close to the approximate value of 11.
+
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
 
 ### There are 3 peaks in the density plot. You pick two people you can get MM,MF.FM,or FF. these are all equally likey so the little peak on left is all the FF's while the little peak on the right is all the MM's so the big one in the middle is both the MF and FM in the same bag so-to-speak.  
