--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -109,7 +109,7 @@ xlab("temperature") + ylab("density")
 print(paste('mean = ', mean(my1000$k16),' sd = ',sd(my1000$k16)))
 ```
 
-The mean will always get close to 50 but hovers around 49. The standard deviation is smaller being around 11 compared to the approximate value of n=9’s 14 standard deviation. Predicting the standard deviation value using sqrt(16) we get about 10.345 being relativley close to the approximate value of 11.
+The mean will always get close to 50 but always around 49. The standard deviation is smaller being around 11 compared to the approximate value of n=9’s 14 standard deviation. Predicting the standard deviation value using sqrt(16) we get about 10.345 being relatively close to the approximate value of 11.
 
 ```{r}
 numb=25
@@ -149,28 +149,4 @@ xlab("temperature") + ylab("density")
 print(paste('mean = ', mean(my1000$k36),' sd = ',sd(my1000$k36)))
 ```
 
-## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
-
-### There are 3 peaks in the density plot. You pick two people you can get MM,MF.FM,or FF. these are all equally likey so the little peak on left is all the FF's while the little peak on the right is all the MM's so the big one in the middle is both the MF and FM in the same bag so-to-speak.  
-
-
-
-
-
-print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
-```
-
-From my observation when you change the number and knit it gives a different graph. It also gives me the value of the standard deviation. It was 41.7267551709583 the first time and I expect this number to be half of the k2.(print(paste( " sd = ",sd(my1000$k9))) is less than half of the k2.
-
-
-
-
-
-
-
-### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
-
-# Now finish by adding blocks with numb being 9, then 16, 25, and 36. be sure to mention how the standard deviation progresses as the sample size changes,
-
-
-After viewing the test it shows that every time its knitted its give a result of a different graph. Also it gives me the value of standard deviation. It was  41.9351221945695 the first time and I expect this number to be half than that. It was less than half it's 14.0238939987023
+The mean is still close to 50 and the standard deviation has decreased to be approximately 7. If we use sqrt (36) to predict the standard deviation we get about 6.89667. The graphs sides now look smooth not seeing the bumps unlike using smaller sample sizes.
